--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>__MSG_extensionName__</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="notes-container">
-      <h1>__MSG_title__</h1>
+      <h1></h1>
       <div id="new-note">
-        <textarea
-          id="note-input"
-          placeholder="__MSG_notePlaceholder__"
-        ></textarea>
-        <button id="add-note">__MSG_addButton__</button>
+        <textarea id="note-input" placeholder=""></textarea>
+        <button id="add-note"></button>
       </div>
       <ul id="notes-list"></ul>
     </div>
